commit 0.1.0 added changes for mobile_code in signup module 27-Feb-2023

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     ></script>
 
     <!-- title -->
-    <title>React App</title>
+    <title>CXPay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
