--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     ></script>
 
     <!-- title -->
-    <title>CX Pay</title>
+    <title>CX PayMe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
